# addition-combinations-haskell

./: .gitignore  AdditionCombinationFinder.hs  AdditionCombinationFinderTest.hs  AdditionCombinations.hs  AdditionCombinationsTest.hs  main.hs  partitions.cabal
src/it/haskell/: Main.hs  PartitionsITest.hs
src/main/haskell/: AdditionCombinations.hs  Main.hs  Partitions.hs
src/main/haskell/Partitions/: Internal.hs
src/test/haskell/: AdditionCombinationsTest.hs  Main.hs  PartitionsTest.hs
src/test/haskell/Partitions/: InternalTest.hs
